
Other
    o   read.traps() allows comma-separated usage values when binary.usage = FALSE
    o   sim.popn() handles IHP N=0 without crashing
    o   shift.mask() updates boundingbox
    o   chat.nk may use clusters in parallel for simulation
    o   internal boundarytoSF extended to sf geometry objects
    o   Fletcher.chat() protected against near-zero expected values

Bugs fixed
    o   secr.fit() crashed R for polygon data with hcov specified

Changes in version 4.6.0 (2023-05-22)

New features or changed behaviour of old functions
    o   exports Fletcher.chat(), nk()
    o   Enk() simulation option
    o   chat.nk() optionally simulates c-hat
    o   AIC and modelAverage methods acquire variance inflation argument 'chat'
        for optional computation of quasi-AIC etc.
    o   adjustVarD() acquires optional argument 'chat'

Bugs fixed
    o   make.capthist() lost covariates when creating non-spatial capthist

Other
    o   trim() method for secrlist objects
    o   chat.nk() 'stats' components renamed; sbar added
    o   Enk() (and hence chat.nk) works for multi-catch traps
    o   sim.popn() model2D 'cluster' has clone-in-place option
    o   fast computation of spacing (PR of Philipp Jund, now ctb)
    o   faster C++ for transect fitting (PR of Philipp Jund)

Changes in version 4.5.9 (2023-03-09)

New features or changed behaviour of old functions
    o   none

Bugs fixed
    o   secr.fit() fitted wrong model for Poisson count detectors when 
        fastproximity = FALSE, giving bad estimates esp. of detectfn parameters
    o   make.capthist() failed with points snapped to transects
    o   sim.popn() model2D 'cluster' mistakenly allowed Ndist = 'fixed'
    o   region.N() could fail with user-provided distance function or when 
        detectors varied among sessions

Other
    o   MS.capthist() help clarified
    o   ip.secr() and pfn() defunct
    o   secr.fit() recognises time-covariate model when timecov is a