@@ -232,6 +232,7 @@ export (AICcompatible)
 export (modelAverage)
 
 S3method(modelAverage, default)
+S3method(collate, default)
 S3method(reduce, default)
 S3method(rotate, default)
 S3method(shift, default)
@@ -457,6 +458,7 @@ S3method(simulate, secr)
 S3method(trim, secr)
 S3method(trim, secrlist)
 S3method(modelAverage, secr)
+S3method(collate, secr)
 
 S3method(print, secrdata)
 S3method(print, secrlist)
@@ -468,6 +470,7 @@ S3method(AICcompatible, secrlist)
 S3method("[", secrlist)
 S3method(c, secrlist)
 S3method(modelAverage, secrlist)
+S3method(collate, secrlist)
 
 S3method(print, Dsurface)
 S3method(plot, Dsurface)
